--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbShop": "Data Source=SL-003877\\SQLEXPRESS;Initial Catalog=DbShop;Integrated Security=True"
+  }
 }
