--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ obj/Debug/net5.0/e-shop.dll
 obj/Debug/net5.0/e-shop.pdb
 obj/Debug/net5.0/ref/e-shop.dll
 .vs/e-shop/v16/.suo
+bin/Debug/net5.0/e-shop.dll
+bin/Debug/net5.0/e-shop.pdb
+bin/Debug/net5.0/ref/e-shop.dll
+obj/Debug/net5.0/e-shop.csproj.CoreCompileInputs.cache
+obj/Debug/net5.0/e-shop.dll
+obj/Debug/net5.0/e-shop.pdb
+obj/Debug/net5.0/ref/e-shop.dll
+.vs/e-shop/config/applicationhost.config
