--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbShop": "Data Source=SL-003877\\SQLEXPRESS;Initial Catalog=DbShop;Integrated Security=True"
+    //lucas
+    "DbShop": "Data Source=DESKTOP-2NJ78VE;Initial Catalog=DbShop;Integrated Security=True"
+    //cwi
+    //"DbShop": "Data Source=SL-003877\\SQLEXPRESS;Initial Catalog=DbShop;Integrated Security=True"
   }
 }
