--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //lucas
-    "DbShop": "Data Source=DESKTOP-2NJ78VE;Initial Catalog=DbShop;Integrated Security=True"
+    //"DbShop": "Data Source=DESKTOP-2NJ78VE;Initial Catalog=DbShop;Integrated Security=True"
     //cwi
-    //"DbShop": "Data Source=SL-003877\\SQLEXPRESS;Initial Catalog=DbShop;Integrated Security=True"
+    "DbShop": "Data Source=SL-003877\\SQLEXPRESS;Initial Catalog=DbShop;Integrated Security=True"
   }
 }
