--- a/e-shop.API.csproj
+++ b/e-shop.API.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210713050913_e-ShopV2.cs" />
+    <Compile Remove="Migrations\20210713050913_e-ShopV2.Designer.cs" />
+    <Compile Remove="Migrations\20210713051439_e-ShopV2.cs" />
+    <Compile Remove="Migrations\20210713051439_e-ShopV2.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
